--- a/apollo-plugin/apollo-plugin-log4j2/pom.xml
+++ b/apollo-plugin/apollo-plugin-log4j2/pom.xml
@@ -40,5 +40,10 @@
             <artifactId>log4j-core</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.ctrip.framework.apollo</groupId>
+            <artifactId>apollo-mockserver</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
